add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 display: flex;
                 padding: 10px;
                 border-style: groove;
+                border-width: 5px;
             }
             nav header {
                 display: flex;
@@ -37,6 +38,7 @@
             nav ul {
                 list-style-image: none;
                 border-style: groove;
+                border-width: 5px;
             }
             nav li {
                 display: inline-block;
@@ -52,6 +54,7 @@
                 background: gold;
                 display: flex;
                 border-style: groove;
+                border-width: 5px;
             }
             .sidebar {
                 margin-right: 25px;
